--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.27",
+    "appwrite": "13.0.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-bootsplash": "^5.4.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.2.3",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.8.0",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
